# csv_file_processing

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
csv_processing/: cli.py  main.py
csv_processing/src/: aggregation.py  core.py  filtering.py  parser.py
tests/: test_csv_processing.py
tests/fixtures/: products1.json  products2.json  products3.json
