[project]
name = "csv-file-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csv_processing"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[project.scripts]
csv-process = "csv_processing.main:main"
